Allow editing variant stock by weight
